[tool.poetry]
name = "budgetbytes"
version = "0.1.0"
description = ""
authors = ["1udvig <luol.hbg@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"

[tool.poetry.scripts]
budgetbytes = "budgetbytes.cli:cli"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
